--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ small {
     font-size: 0.75rem;
     line-height: 1.5;
     font-weight: 400;
-    padding: 1.125rem 0 1.125rem 0;
 }
 
 /* SE APLICA OPACIDAD A LA CLASE SIMBOLO PARA CAMBIAR SU ESTADO BASE */
@@ -163,11 +162,27 @@ input[type=number]::-webkit-outer-spin-button {
     z-index: 1000;
     margin-top: -4.5rem;
     min-height: 4.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 12px;
+    padding: 1.125rem 0 1.125rem 0;
 }
 
 a {
     text-decoration: none;
     color: rgba(51, 65, 85, 0.70);
+}
+
+.small-button {
+    background-color: #0f62ea;
+    border: none;
+    border-radius: 4px;
+    padding: 8px 12px;
+    margin: none;
+    color: white;
+    font-weight: 500;
 }
 
 /* RESPONSIVE */
@@ -239,6 +254,14 @@ a {
 
     .divisor {
         padding: 0 1.75rem 0 1.75rem;
+    }
+
+        .contenedor4 {
+        flex-direction: column;
+    }
+
+    .smaller {
+        text-align: center;
     }
 
 }
