--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ small {
 }
 
 .smaller {
-    text-align: center;
+    text-align: left;
     color: rgba(51, 65, 85, 0.70);
     font-size: 0.75rem;
     line-height: 1.5;
