--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ input[type=number]::-webkit-outer-spin-button {
     min-height: 4.5rem;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: left;
     flex-direction: row;
     gap: 12px;
     padding: 1.125rem 0 1.125rem 0;
