--- a/style.css
+++ b/style.css
@@ -176,13 +176,50 @@ a {
 }
 
 .small-button {
+    /* NUEVO: Estilo botón de comentarios.*/
+    border-radius: 0.375rem;
+    background: rgba(15, 98, 234, 0.15);
+    display: inline-flex;
+    padding: 3px 10px;
+    align-items: center;
+    gap: 10px;
+    color: #0F62EA;
+    font-family: Inter;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 22px;
+    border: none;
+    cursor: pointer;
+}
+/* Ocultar elementos */
+.hidden {
+    display: none;
+}
+
+/* Estilo btn-Container */
+.btn-container {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    margin-top: 43px;
+}
+
+/* Estilo de toggle-btn */
+#toggle-btn {
+    gap: 10px;
     background-color: #0f62ea;
     border: none;
     border-radius: 4px;
-    padding: 8px 12px;
-    margin: none;
-    color: white;
+    padding: 3px 10px;
     font-weight: 500;
+    color: #FFF;
+    font-family: Inter;
+    font-size: 12px;
+    line-height: 22px;
+    font-style: normal;
+    cursor: pointer;
+
 }
 
 /* RESPONSIVE */
