--- a/style.css
+++ b/style.css
@@ -202,7 +202,7 @@ a {
     display: flex;
     align-items: center;
     flex-direction: row;
-    margin-top: 43px;
+    margin-top: 2.5rem;
 }
 
 /* Estilo de toggle-btn */
